修改数据库密码

--- a/jpa/src/main/resources/jdbc.properties
+++ b/jpa/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/jpa?characterEncoding=utf8&amp;useSSL=false
 jdbc.username=root
-jdbc.password=zdhwlqq1994613
+jdbc.password=123456
